stateDiagram-v2
  state blogFilter {
    state search {
      [*] --> idle
      active --> idle : CLEAR_ALL
      active --> idle : SET_QUERY
      active --> active : SET_QUERY
      idle --> active : SET_QUERY
    }
    --
    state tagFilter {
      [*] --> empty
      empty --> filtering : TOGGLE_TAG
      filtering --> empty : CLEAR_ALL
      filtering --> empty : TOGGLE_TAG
      filtering --> filtering : TOGGLE_TAG
    }
  }
